--- a/index.html
+++ b/index.html
@@ -8,5 +8,18 @@
     <title>Landing Page</title>
 </head>
 <body>
+    <div class="nav">
+        <div>Header Logo</div>
+        <ul>
+            <li><a href="">header link one</a></li>
+            <li><a href="">header link two</a></li>
+            <li><a href="">header link three</a></li>
+        </ul>
+    </div>
+    <div class="header">Header</div>
+    <div class="info">Content</div>
+    <div class="quote">Quote</div>
+    <div class="sign-up">Sign up</div>
+    <div class="footer">Footer</div>
 </body>
 </html>
