--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="nav">
-        <div>Header Logo</div>
+        <div class="logo">Header Logo</div>
         <ul>
             <li><a href="">header link one</a></li>
             <li><a href="">header link two</a></li>
