--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
             <li><a href="">header link three</a></li>
         </ul>
     </div>
-    <div class="header">Header</div>
+    <div class="header">
+        <div class="text">
+            <div class="main-text">This website is <br>awesome</div>
+            <p>This website has some subtext that goes under the main title.<br> It's smaller font and the color is lower contrast.</p>
+            <button class="first-button">Sign up</button>
+        </div>
+        <div class="image">this is a placeholder for an image</div>
+    </div>
     <div class="info">Content</div>
     <div class="quote">Quote</div>
     <div class="sign-up">Sign up</div>
