--- a/index.html
+++ b/index.html
@@ -24,7 +24,27 @@
         </div>
         <div class="image">this is a placeholder for an image</div>
     </div>
-    <div class="info">Content</div>
+    <div class="info">
+        <h3>Some random information.</h3>
+        <div class="box-container">
+            <div class="box">
+                <div class="box-placeholder"></div>
+                <p class="box-subtext">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="box">
+                <div class="box-placeholder"></div>
+                <p class="box-subtext">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="box">
+                <div class="box-placeholder"></div>
+                <p class="box-subtext">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="box">
+                <div class="box-placeholder"></div>
+                <p class="box-subtext">this is some subtext under an illustration or image</p>
+            </div>
+        </div>
+    </div>
     <div class="quote">Quote</div>
     <div class="sign-up">Sign up</div>
     <div class="footer">Footer</div>
