Added Quote Section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="image">this is a placeholder for an image</div>
     </div>
     <div class="info">
-        <h3>Some random information.</h3>
+        <h2>Some random information.</h2>
         <div class="box-container">
             <div class="box">
                 <div class="box-placeholder"></div>
@@ -45,7 +45,10 @@
             </div>
         </div>
     </div>
-    <div class="quote">Quote</div>
+    <div class="quote">
+        <div class="quote-text"><em>This is an inspiring quote, or a testamonial form a customer. Maybe it's just filling up space, or maybe people will actuall read it. 
+            Who knows? All I know is that it looks nice.</em> <strong>-Thor, God of Thunder</strong></div>
+    </div>
     <div class="sign-up">Sign up</div>
     <div class="footer">Footer</div>
 </body>
