Added sign up and footer

--- a/index.html
+++ b/index.html
@@ -47,9 +47,17 @@
     </div>
     <div class="quote">
         <div class="quote-text"><em>This is an inspiring quote, or a testamonial form a customer. Maybe it's just filling up space, or maybe people will actuall read it. 
-            Who knows? All I know is that it looks nice.</em> <strong>-Thor, God of Thunder</strong></div>
+            Who knows? All I know is that it looks nice.</em> <br><strong>-Thor, God of Thunder</strong></div>
     </div>
-    <div class="sign-up">Sign up</div>
-    <div class="footer">Footer</div>
+    <div>
+        <div class="sign-up">
+            <div>
+                <div class="call-to-action">Call to action! It's time!</div>
+                <div class="sign-up-text">Sign up for our product by clciking that button right over there!</div>
+            </div>
+            <button class="second-button">Sign up</button>
+        </div>
+    </div>
+    <div class="footer">Copyright The Odin Project 2021</div>
 </body>
 </html>
